# etch

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  claude.md  config.yml  markdown_extensions.py  pyproject.toml  requirements.txt  utils.py
docs/: getting-started.md
etch/: admin_password_updater.py  app.py  auth.py  cli.py  markdown_extensions.py  utils.py
etch/pages/: about.md  markdown-example.md
etch/posts/: bus-bunching.md  post-color-accessibility.md
etch/static/css/: main.css
etch/static/js/: main.js
etch/static/scss/: _variables.scss  main.scss
etch/static/scss/components/: markdown.css  markdown.scss  navigation.scss  posts.scss  projects.scss
etch/static/scss/layout/: admin.scss
etch/templates/: base.html  index.html  page.html
etch/templates/errors/: 404.html  500.html
pages/: contact.md
posts/: bus-bunching.md  central-banks.md  post-color-accessibility.md
projects/: etch.md  pattern.md  retina.md
static/css/: main.css
static/js/: posts.js
static/scss/: _mixins.scss  _placeholders.scss  _variables.scss  main.scss
static/scss/components/: navigation.scss  posts.scss  projects.scss
static/scss/layout/: admin.scss
templates/: post.html  project.html  projects.html
templates/admin/: dashboard.html  login.html
