[project]
name = "etch"
version = "0.1.0"
description = "A featherlight Markdown + python personal site framework inspired by pain, built by Claude"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
authors = [
  { name = "Rob Kimball", email = "rob@rgk.io" },
]
keywords = ["markdown", "flask", "web framework", "minimal", "static"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://rgk.io/projects/etch"
Repository = "https://github.com/rgkimball/etch"
Issues = "https://github.com/rgkimball/etch/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
etch = "etch.cli:main"
